# voltbot

./: .gitignore  README.md  biome.json  docker-compose.yml  package.json  pnpm-lock.yaml  prompt.md
db/: schema.sql
db/migrations/: 20260323154300_create-tables.sql  20260326215409_create-rag-tables.sql  20260426030000_create-memories.sql  20260426031500_create-relationships.sql  20260426033000_create-memory-chats.sql
modal/: agent_gateway.py
scripts/: createCmds.ts  inspectSim.ts  replayTestChat.ts  simulateChat.ts  simulateFull.ts  stressMemories.ts  testMemoryRecall.ts  updateRAG.ts
src/: ai.ts  client.ts  config.ts  convo.ts  db.ts  index.ts  transcribe.ts
src/tools/: discordContext.ts  memory.ts  rag.ts
src/util/: attachments.ts  channelPreamble.ts  message.ts
whisper/: main.py  pyproject.toml
