[project]
name = "mira-transcription"
version = "0.1.0"
description = "Modal transcription service for Mira"
requires-python = ">=3.12"
dependencies = [
    "black>=26.3.1",
    "fastapi[standard]>=0.136.0",
    "faster-whisper==1.2.1",
    "librosa>=0.11.0",
    "modal>=1.4.1",
    "openai-whisper>=20250625",
    "pydantic>=2.13.1",
    "requests>=2.33.1",
]
